# todos-axum-htmx

./: .env  Cargo.toml  README.md  bacon.toml
migrations/: 20251001135157_todos.sql
src/: main.rs
templates/: index.hbs  todo-cards.hbs
