[package]
name = "todos-axum-htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
